Se ayaden los datos de dos señales para el romba de diferentes pruebas del funcionamiento del control

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ Latex/0main.synctex.gz
 ControlDinamico/Pure_Pursuit/prueba_persecucionPURA.asv
 ControlDinamico/Pure_Pursuit/sl_robot_sincrono_persecucion_pura.slx.autosave
 ControlDinamico/Pure_Pursuit/control_persecucion.asv
+Latex/0main.aux
+Latex/0main.log
+Latex/0main.out
+Latex/0main.toc
+Latex/0main.synctex.gz
